--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NoteDown</title>
-    <meta name="description" content="A modern infinite canvas note-taking application" />
-    <meta name="author" content="NoteDown" />
 
-    <meta property="og:title" content="NoteDown" />
-    <meta property="og:description" content="A modern infinite canvas note-taking application" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="/logo.png" />
+  <title>NoteDown</title>
+  <meta name="description" content="A modern infinite canvas note-taking application" />
+  <meta name="author" content="NoteDown" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@NoteDown" />
-    <meta name="twitter:image" content="/og-image.png" />
-  </head>
+  <meta property="og:title" content="NoteDown" />
+  <meta property="og:description" content="A modern infinite canvas note-taking application" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/og-image.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@NoteDown" />
+  <meta name="twitter:image" content="/og-image.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
